--- a/javascript-basics-01/Step_1.html
+++ b/javascript-basics-01/Step_1.html
@@ -5,5 +5,10 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <script>
+            var name="Hi, I'm Variable Name :D";
+            alert(name);
+        </script>
     </body>
 </html>
+
