--- a/javascript-basics-01/Step_2.html
+++ b/javascript-basics-01/Step_2.html
@@ -7,3 +7,9 @@
     <body>
     </body>
 </html>
+<script>
+    var name="Doe";
+    var surname="John";
+    var city="New-York";
+    alert("Nom: "+name+"\n"+"Prenom: "+surname+"\n"+"Ville: "+city);
+</script>
