--- a/javascript-basics-01/Step_1.html
+++ b/javascript-basics-01/Step_1.html
@@ -8,6 +8,6 @@
     </body>
 </html>
 <script>
-    var name="Hi, I'm Variable Name :D";
+    var name="Hi there, I'm Variable Name :D";
     alert(name);
 </script>
