--- a/javascript-basics-01/Step_5.html
+++ b/javascript-basics-01/Step_5.html
@@ -8,7 +8,14 @@
         <form>
             <label for="first_number">first number : </label><input type="text" id="first_number" name="first_number"/><br/>
             <label for="second_number">second number : </label><input type="text" id="second_number" name="second_number"/><br/>
-            <button  id="validate" name ="validate">validate</button>
+            <button  id="validate" name ="validate" onclick="func(document.getElementById('first_number').value,
+            document.getElementById('second_number').value)">validate</button>
         </form>
     </body>
 </html>
+
+<script>
+    function func(x,y){
+        alert("The result for the two numbers multipation is: "+(x*y));
+    }
+</script>
