--- a/javascript-basics-01/Step_6.html
+++ b/javascript-basics-01/Step_6.html
@@ -3,12 +3,15 @@
     <head>
         <title>Step 6</title>
         <meta charset="UTF-8">
+        <script src="Step-6.js">
+        </script>
     </head>
     <body>
         <form>
             <label for="first_number">first number : </label><input type="text" id="first_number" name="first_number"/><br/>
             <label for="second_number">second number : </label><input type="text" id="second_number" name="second_number"/><br/>
-            <button  id="validate" name ="validate">validate</button>
+            <button  id="validate" name ="validate" onclick="func(document.getElementById('first_number').value,
+            document.getElementById('second_number').value)">validate</button>
         </form>
     </body>
 </html>
