--- a/javascript-basics-02/step 5/index.html
+++ b/javascript-basics-02/step 5/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Step 5</title>
+    <script src="Step_5.js"></script>
   </head>
   <body>
     <div class="container">
-      <img src="images/image1.jpg" id="image1" />
-      <img src="images/image2.jpg" id="image2" />
-      <img src="images/image3.jpg" id="image3" />
-      <img src="images/image4.jpg" id="image4" />
-      <img src="images/image5.jpg" id="image5" />
+      <img src="images/image1.jpg" id="image1" onmouseover="func(document.querySelector('#image1'))"/>
+      <img src="images/image2.jpg" id="image2" onmouseover="func(document.querySelector('#image2'))"/>
+      <img src="images/image3.jpg" id="image3" onmouseover="func(document.querySelector('#image3'))"/>
+      <img src="images/image4.jpg" id="image4" onmouseover="func(document.querySelector('#image4'))"/>
+      <img src="images/image5.jpg" id="image5" onmouseover="func(document.querySelector('#image5'))"/>
     </div>
   </body>
 </html>
