--- a/javascript-basics-03/step 4/index.html
+++ b/javascript-basics-03/step 4/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Step 4</title>
+  <script src="Step_4.js"></script>
 </head>
 <body>
   <form>
     <label for="password">password : </label><input type="text" name="password" value="" id="password" />
     <label for="confirmation">Confirm : </label><input type="text" name="confirmation" value="" id="confirmation" />
-    <button type="button" name="button" >Test</button>
+    <button type="button" name="button" onclick="func(document.getElementById('password').value,
+    document.getElementById('confirmation').value)">Test</button>
   </form>
 </body>
 </html>
